// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormTextSearchInput renders correctly with error 1`] = `
<label class="govuk-label"
       for="test-input"
>
  Test input
</label>
<span class="govuk-error-message"
      id="test-input-error"
>
  <span class="govuk-visually-hidden">
    Error:
  </span>
  Field is required
</span>
<div class>
  <input name="testInput"
         aria-describedby="test-input-error"
         class="govuk-input searchInput govuk-input--error"
         id="test-input"
         type="text"
         value
  >
</div>
`;

exports[`FormTextSearchInput renders correctly with hint 1`] = `
<label class="govuk-label"
       for="test-input"
>
  Test input
</label>
<span id="test-input-hint"
      class="govuk-hint"
>
  Fill me in
</span>
<div class>
  <input name="testInput"
         aria-describedby="test-input-hint"
         class="govuk-input searchInput"
         id="test-input"
         type="text"
         value
  >
</div>
`;

exports[`FormTextSearchInput renders correctly with required props 1`] = `
<label class="govuk-label"
       for="test-input"
>
  Test input
</label>
<div class>
  <input name="testInput"
         class="govuk-input searchInput"
         id="test-input"
         type="text"
         value
  >
</div>
`;

exports[`FormTextSearchInput renders with a specific width class 1`] = `
<label class="govuk-label"
       for="test-input"
>
  Test input
</label>
<span id="test-input-hint"
      class="govuk-hint"
>
  Fill me in
</span>
<div class>
  <input name="testInput"
         aria-describedby="test-input-hint"
         class="govuk-input searchInput govuk-input--width-20"
         id="test-input"
         type="text"
         value
  >
</div>
`;
